[gd_scene load_steps=3 format=3 uid="uid://0kf4uekbmijd"]

[ext_resource type="Script" path="res://scenes/fly_spawner/fly_spawner.gd" id="1_0j358"]

[sub_resource type="Curve2D" id="Curve2D_c3y6j"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -343, 241, 0, 0, 0, 0, -357, -2, 0, 0, 0, 0, -168, -112, 0, 0, 0, 0, 70, -215, 0, 0, 0, 0, 597, -249, 0, 0, 0, 0, 1062, -208, 0, 0, 0, 0, 1421, -123, 0, 0, 0, 0, 1464, 3, 0, 0, 0, 0, 1453, 263, 0, 0, 0, 0, 1381, 319, 0, 0, 0, 0, 1244, 319, 0, 0, 0, 0, 1136, 267, 0, 0, 0, 0, 1071, 148, 0, 0, 0, 0, 1069, -2, 0, 0, 0, 0, 913, -127, 0, 0, 0, 0, 671, -134, 0, 0, 0, 0, 447, -139, 0, 0, 0, 0, 117, -119, 0, 0, 0, 0, -40, -6, 0, 0, 0, 0, -70, 47, 0, 0, 0, 0, -81, 214, 0, 0, 0, 0, -132, 337, 0, 0, 0, 0, -227, 353, 0, 0, 0, 0, -321, 330, 0, 0, 0, 0, -348, 241)
}
point_count = 25

[node name="FlySpawner" type="Node2D"]
script = ExtResource("1_0j358")

[node name="SpawnerPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_c3y6j")

[node name="SpawnLocation" type="PathFollow2D" parent="SpawnerPath"]
position = Vector2(256.234, -127.438)
rotation = 3.08106
progress = 3969.47

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
